--- a/assets/css/custom/index.scss
+++ b/assets/css/custom/index.scss
@@ -2,7 +2,7 @@
 .site-header.site-container {
     position: sticky;
     top: -30px;
-    background-color: white;
+    background-color: var(--color-body);
     padding-bottom: 10px;
     z-index: 999;
 }
@@ -39,4 +39,9 @@
     .privacy-policy {
         justify-content: center;
     }
+}
+
+// why choose us sectoin
+.portfolio-grid {
+    margin-top: 80px;
 }
