--- a/default.hbs
+++ b/default.hbs
@@ -79,8 +79,8 @@
           {{/unless}}
         </p>
         <ul class="privacy-policy">
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms and conditions</a></li>
+          <li><a href="/privacy-policy">Privacy Policy</a></li>
+          {{!-- <li><a href="/terms-and-conditions">Terms and Conditions</a></li> --}}
         </ul>
       </div>
 
