--- a/home.hbs
+++ b/home.hbs
@@ -8,7 +8,7 @@
 
 {{> custom/home/why-choose-us}}
 
-{{#get "posts" include="tags" filter="tag:hash-work" limit="2"}}
+{{!-- {{#get "posts" include="tags" filter="tag:hash-work" limit="2"}}
   {{#if posts}}
   <section class="portfolio-grid {{#match @custom.portfolio_size "Full-width"}}fullwidth{{else}}fixedwidth{{/match}}">
     <div class="site-container no-padding">
@@ -64,7 +64,7 @@
     </div>
   </section>
   {{/if}}
-{{/get}}
+{{/get}} --}}
 
 {{!-- {{#get "posts" filter="tag:hash-testimonial" limit="all"}}
   {{#if posts}}
