--- a/custom-consulting.hbs
+++ b/custom-consulting.hbs
@@ -16,7 +16,7 @@
             <li class="service-item">
                 <i class="fas fa-tools"></i>
                 <h2>Database Quick Fix</h2>
-                <p>Resolve critical database issues fast. Our experts quickly diagnose problems and implement effective
+                <p>Resolve critical database issues fast. We quickly diagnose problems and implement effective
                     solutions to get your system back on track.</p>
             </li>
             <li class="service-item">
