Update copyright year in footer of landing page

--- a/custom-rw-landingpage.hbs
+++ b/custom-rw-landingpage.hbs
@@ -472,7 +472,7 @@
                 </a>
             </div>
             
-            <p style="color: #7f8c8d; font-size: 0.9rem;">© 2024 Runners Weather. All rights reserved.</p>
+            <p style="color: #7f8c8d; font-size: 0.9rem;">© 2025 Desseign Studio. All rights reserved.</p>
         </div>
     </footer>
 </body>
