removed placeholder screenshots

--- a/custom-rw-landingpage.hbs
+++ b/custom-rw-landingpage.hbs
@@ -427,13 +427,7 @@
         <h2>📸 Sneak Peek</h2>
         <p>Get a glimpse of the clean, intuitive interface designed specifically for runners</p>
         <div class="screenshots-container">
-            <img class="screenshot-frame" src="{{asset 'images/screenshot1.jpeg'}}" alt="">
-            <div class="screenshot-frame">
-                Hourly Forecast<br>Screenshot<br>Goes Here
-            </div>
-            <div class="screenshot-frame">
-                Settings View<br>Screenshot<br>Goes Here
-            </div>
+            <img class="screenshot-frame" src="{{asset 'images/screenshot1.jpeg'}}" alt="sneak-peak">
         </div>
     </section>
 
