Added ghost_head and ghost_foot  in landing page

--- a/custom-rw-landingpage.hbs
+++ b/custom-rw-landingpage.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runners Weather - Your Personal Running Forecast</title>
+    {{ghost_head}}
     <style>
         * {
             margin: 0;
@@ -465,5 +466,6 @@
             <p style="color: #7f8c8d; font-size: 0.9rem;">© 2025 Desseign Studios.</p>
         </div>
     </footer>
+    {{ghost_foot}}
 </body>
 </html>
