Update footer copyright year to be dynamic

--- a/custom-rw-landingpage.hbs
+++ b/custom-rw-landingpage.hbs
@@ -463,7 +463,7 @@
                 </a>
             </div>
             
-            <p style="color: #7f8c8d; font-size: 0.9rem;">© 2025 Desseign Studios.</p>
+            <p style="color: #7f8c8d; font-size: 0.9rem;">© {{date format="YYYY"}} Desseign Studios.</p>
         </div>
     </footer>
     {{ghost_foot}}
